--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "design-system",
   "version": "1.0.0",
   "description": "design system components",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
