--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "design-system",
-  "version": "1.0.0",
+  "name": "@briangonzaloc/design-system",
+  "version": "1.0.5",
   "description": "design system components",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 1 'fonts/**/*' dist/fonts && copyfiles -u 1 'src/**/*.scss' dist",
     "prepublishOnly": "npm run build"
   },
   "author": "briangonzaloc",
@@ -36,6 +36,7 @@
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
+    "copyfiles": "^2.4.1",
     "css-loader": "^7.1.2",
     "prettier": "^3.4.2",
     "sass": "^1.83.4",
@@ -43,5 +44,8 @@
     "storybook": "^8.5.0",
     "style-loader": "^4.0.0",
     "typescript": "^5.7.3"
+  },
+  "engines": {
+    "node": "22.13.1"
   }
 }
